compiler/driver/tests/snapshots/fixtures__m2-values__errors__if-not-boolean.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m2-values/errors/if-not-boolean.scoop:2:9: error: if condition must be Boolean, found Int
