compiler/driver/tests/snapshots/fixtures__m2-values__errors__string-plus-int.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m2-values/errors/string-plus-int.scoop:2:13: error: operator `+` requires Int operands, found String and Int
