compiler/driver/tests/snapshots/fixtures__m2-values__errors__undefined-variable.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m2-values/errors/undefined-variable.scoop:2:13: error: unknown variable `x`
