compiler/driver/tests/snapshots/fixtures__m2-values__errors__unknown-field.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m2-values/errors/unknown-field.scoop:5:15: error: struct `Point` has no field `z`
